# fleet-proto-rs

./: Cargo.toml  README.md
src/: constraints.rs  devices.rs  i2i.rs  lib.rs  plato.rs
tests/: integration.rs
