[package]
name = "fleet-proto"
version = "0.1.0"
edition = "2021"
description = "Shared fleet types: PLATO client, I2I messages, constraint types, device types"
license = "Apache-2.0"
repository = "https://github.com/SuperInstance/fleet-proto-rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
